crates/buff-game/tests/snapshots/unit_tests__error_asset_load.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: e1
---
AssetLoad {
    path: "img.png",
    reason: "decode failed",
}
