crates/buff-game/tests/snapshots/unit_tests__error_requires_window.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: e4
---
RequiresWindow(
    "Game.run()",
)
