crates/buff-game/tests/snapshots/unit_tests__snapshot_draw_command_sprite.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: cmd
---
Sprite {
    texture_path: "hero.png",
    transform: Transform {
        position: (
            10.0,
            20.0,
        ),
        rotation: 0.0,
        scale: (
            1.0,
            1.0,
        ),
    },
}
