crates/buff-game/tests/snapshots/unit_tests__snapshot_draw_command_text.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: cmd
---
Text {
    content: "Score: 42",
    position: (
        50.0,
        10.0,
    ),
}
