crates/buff-game/tests/snapshots/unit_tests__snapshot_game_config_debug.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: cfg
---
GameConfig {
    width: 1024,
    height: 768,
    title: "SnapshotGame",
    max_frames: Some(
        600,
    ),
    fixed_dt: 0.016666668,
}
