crates/buff-game/tests/snapshots/unit_tests__snapshot_transform_default.snap
---
source: crates/buff-game/tests/unit_tests.rs
expression: t
---
Transform {
    position: (
        0.0,
        0.0,
    ),
    rotation: 0.0,
    scale: (
        1.0,
        1.0,
    ),
}
